--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3008",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,10 +11,13 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.5",
     "react": "^18",
-    "react-datepicker": "^7.3.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5",
+    "react-datepicker": "^7.3.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
