--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,18 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5",
-    "react-datepicker": "^7.3.0"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5"
+    "eslint-config-next": "^14.2.5",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
