--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "extends": ["next", "next/core-web-vitals"],
   "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "single"],
+    "semi": ["warn", "always"],
+    "quotes": ["warn", "single"],
     "no-unused-vars": "warn",
     "react/react-in-jsx-scope": "off"
   }
