update for listing and betting

--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,5 @@ NEXT_PUBLIC_API_ULR=https://flashlive-sports.p.rapidapi.com/v1
 # NEXT_PUBLIC_API_KEY=a9c98e38a0mshed7640eccfd80b3p1dc106jsn3b8fba3f46e6
 NEXT_PUBLIC_API_KEY=24193b4722msh098734db8c9c805p112d8bjsn80d4e3d80b98
 NEXT_PUBLIC_PROD_API_URL=http://localhost:6020/dev/kikxbet/api/v1
+NEXT_PUBLIC_BASE_API_URL=https://api.opticodds.com/api/v3
+NEXT_PUBLIC_API_KEY=e8dbedfa-f0be-4257-9d6a-bb06c42048a2
