--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.5",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
