auth complete with social

--- a/client/.env
+++ b/client/.env
@@ -3,4 +3,15 @@ NEXT_PUBLIC_API_ULR=https://flashlive-sports.p.rapidapi.com/v1
 NEXT_PUBLIC_API_KEY=24193b4722msh098734db8c9c805p112d8bjsn80d4e3d80b98
 NEXT_PUBLIC_PROD_API_URL=http://localhost:6020/dev/kikxbet/api/v1
 NEXT_PUBLIC_BASE_API_URL=https://api.opticodds.com/api/v3
-NEXT_PUBLIC_API_KEY=e8dbedfa-f0be-4257-9d6a-bb06c42048a2
+NEXT_PUBLIC_API_KEY=c103a701-6ebe-47a4-b45f-de8281073a94
+
+
+DB_USER=root
+DB_NAME="kikxbet_db"
+DB_PASSWORD=EhN_N6978
+DB_HOST=localhost   
+DB_PORT=3306
+
+NEXTAUTH_SECRET_CUS=t7ewyqFqzBURNd/Gzc2aoM8aesccjxdUD9xN41Vpi74=
+JWT_SECRET=t7ewyqFqzBURNd/Gzc2aoM8aesccjxdUD9xN41Vpi74=
+NEXTAUTH_URL=http://localhost:3000
