--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "mysql2": "^3.11.3",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
+    "sequelize": "^6.37.3",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
